alpm-types/src/snapshots/source::invalid_filename@case_4.snap
---
source: alpm-types/src/source.rs
---
error: invalid package artifact source
 | 
 | /absolute/path
 | ^
 | 
 = note: File name (/absolute/path) contains invalid characters: /
